# giflib

./: CMakeLists.txt
lib/: egif_lib.c
